# physics_visuals

./: .flake8  LICENSE  README.md  pyproject.toml
examples/pwave_examples/: interactions.py  long_wave_grid.py  pwave_animation.py  pwave_latest.py
plot_styles/: __init__.py  large_style.mplstyle  medium_grid_style.mplstyle  medium_style.mplstyle  set_style.py  thin_grid_style.mplstyle  thin_style.mplstyle
pwave/: animation.py  math.py  model.py  molecules.py
tests/: test_molecules.py
